--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -23,6 +23,10 @@ workflows:
           include: true
           source: true
     scripts:
+      - name : create ios
+        script : |
+            mkdir ios
+            cd ios
       - name: Install pods
         script: |
           pod install
